Ajustar interfaz al estilo prometido tipo app store móvil

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <main class="phone-shell">
       <section class="hero">
-        <div class="hero-overlay"></div>
         <div class="hero-content">
           <h1>Convertidor de unidades</h1>
           <p class="brand">Smart Tools estilo • edición personalizada</p>
@@ -18,6 +17,11 @@
             <span>⬇️ 10M+</span>
             <span>👨‍👩‍👧‍👦 Público general</span>
           </div>
+          <div class="hero-actions">
+            <button class="install-btn" type="button">Instalar en más dispositivos</button>
+            <button class="share-btn" type="button">Compartir</button>
+          </div>
+          <p class="availability">Disponible para tus dispositivos y tu familia.</p>
         </div>
       </section>
 
@@ -64,6 +68,13 @@
         <section class="quick-conversions">
           <h3>Conversiones rápidas</h3>
           <div id="quickCards" class="quick-grid"></div>
+        </section>
+
+        <section class="preview-strip" aria-label="Vistas previas">
+          <article class="mini-card">📏<span>Longitud</span></article>
+          <article class="mini-card">⚖️<span>Peso</span></article>
+          <article class="mini-card">🧪<span>Volumen</span></article>
+          <article class="mini-card">⚡<span>Energía</span></article>
         </section>
 
         <details>
