--- a/index.html
+++ b/index.html
@@ -3,85 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Convertidor de unidades</title>
+    <title>Conversor SV Pro</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="phone-shell">
-      <section class="hero">
-        <div class="hero-content">
-          <h1>Convertidor de unidades</h1>
-          <p class="brand">Smart Tools estilo • edición personalizada</p>
-          <div class="meta">
-            <span>⭐ 4.6</span>
-            <span>⬇️ 10M+</span>
-            <span>👨‍👩‍👧‍👦 Público general</span>
-          </div>
-          <div class="hero-actions">
-            <button class="install-btn" type="button">Instalar en más dispositivos</button>
-            <button class="share-btn" type="button">Compartir</button>
-          </div>
-          <p class="availability">Disponible para tus dispositivos y tu familia.</p>
+    <main class="app">
+      <header class="top">
+        <h1>Conversor SV Pro</h1>
+        <p>Unidades salvadoreñas e internacionales en una sola app.</p>
+      </header>
+
+      <nav class="modes" aria-label="Modos de catálogo">
+        <button id="btn-local" class="mode active" type="button">Unidades salvadoreñas</button>
+        <button id="btn-global" class="mode" type="button">Internacionales</button>
+        <button id="btn-all" class="mode" type="button">Todas</button>
+      </nav>
+
+      <section class="card">
+        <div class="title-row">
+          <span id="categoryIcon" class="icon">📏</span>
+          <h2 id="categoryTitle">Longitud</h2>
+        </div>
+
+        <label>Categoría<select id="categorySelect"></select></label>
+        <label>Valor<input id="valueInput" type="number" step="any" value="1" /></label>
+        <label>Desde<select id="fromSelect"></select></label>
+        <label>Hacia<select id="toSelect"></select></label>
+
+        <div class="actions">
+          <button id="swapButton" type="button">🔁</button>
+          <button id="convertButton" class="primary" type="button">Convertir</button>
         </div>
       </section>
 
-      <section class="app-screen">
-        <div class="mode-actions">
-          <button id="salvadorButton" class="mode-btn active" type="button">Unidades salvadoreñas</button>
-          <button id="globalButton" class="mode-btn" type="button">Internacionales</button>
-          <button id="allButton" class="mode-btn" type="button">Todas</button>
-        </div>
+      <section id="resultBox" class="result" aria-live="polite">Selecciona una conversión.</section>
 
-        <section class="panel">
-          <div class="section-title">
-            <span id="categoryIcon" class="category-icon">📏</span>
-            <h2 id="categoryTitle">Longitud</h2>
-          </div>
-
-          <div class="grid">
-            <label>
-              <span class="label-title">Categoría</span>
-              <select id="categorySelect"></select>
-            </label>
-            <label>
-              <span class="label-title">Valor</span>
-              <input id="valueInput" type="number" step="any" value="1" />
-            </label>
-            <label>
-              <span class="label-title">Desde</span>
-              <select id="fromSelect"></select>
-            </label>
-            <label>
-              <span class="label-title">Hacia</span>
-              <select id="toSelect"></select>
-            </label>
-          </div>
-
-          <div class="actions">
-            <button id="swapButton" type="button">🔁</button>
-            <button id="convertButton" type="button">Convertir</button>
-          </div>
-        </section>
-
-        <section class="result" id="resultBox" aria-live="polite">Selecciona una conversión.</section>
-
-        <section class="quick-conversions">
-          <h3>Conversiones rápidas</h3>
-          <div id="quickCards" class="quick-grid"></div>
-        </section>
-
-        <section class="preview-strip" aria-label="Vistas previas">
-          <article class="mini-card">📏<span>Longitud</span></article>
-          <article class="mini-card">⚖️<span>Peso</span></article>
-          <article class="mini-card">🧪<span>Volumen</span></article>
-          <article class="mini-card">⚡<span>Energía</span></article>
-        </section>
-
-        <details>
-          <summary>Regla de conversión</summary>
-          <code id="ruleText"></code>
-        </details>
+      <section class="quick">
+        <h3>Conversiones rápidas</h3>
+        <div id="quickCards" class="quick-grid"></div>
       </section>
+
+      <details>
+        <summary>Regla de conversión</summary>
+        <code id="ruleText"></code>
+      </details>
     </main>
 
     <script src="units-data.js"></script>
